feat: add slides for J3 J4
refactor: change slides order/numbering

--- a/slides/24_concepts_F_ddd.html
+++ b/slides/24_concepts_F_ddd.html
@@ -495,6 +495,8 @@ eventBus.publish(new PresentationCreated(pres.id));
 
 <section>
   <h2>❓ Quiz Interactif</h2>
+</section>
+<section
   <ul>
     <li>1. Qu'est-ce qu'un Value Object ?
       <ul>
@@ -504,6 +506,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Un événement métier</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>2. Quel est le rôle de l’Aggregate Root ?
       <ul>
         <li>A) Contrôler la consistance de l’agrégat</li>
@@ -512,6 +518,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Définir l’interface utilisateur</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>3. À quoi sert un Domain Service ?
       <ul>
         <li>A) Stocker les données</li>
@@ -520,6 +530,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Générer des vues</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>4. Qu'est-ce qu'un Repository ?
       <ul>
         <li>A) Un objet métier</li>
@@ -528,6 +542,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Une factory</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>5. Quel pattern protège un contexte d’influence externe ?
       <ul>
         <li>A) Shared Kernel</li>
@@ -536,6 +554,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Partnership</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>6. Qu'est-ce qu'un Domain Event ?
       <ul>
         <li>A) Un objet immuable signalant un changement métier</li>
@@ -544,6 +566,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Un service métier</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>7. Pourquoi utiliser un Ubiquitous Language ?
       <ul>
         <li>A) Pour réduire la duplication de code</li>
@@ -552,6 +578,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Pour améliorer la performance</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>8. Qu'est-ce qu'une Context Map ?
       <ul>
         <li>A) Liste de tous les modules</li>
@@ -560,6 +590,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Catalogue de services</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>9. Quelle est la Transactional Boundary ?
       <ul>
         <li>A) La limite d’un service HTTP</li>
@@ -568,6 +602,10 @@ eventBus.publish(new PresentationCreated(pres.id));
         <li>D) Un événement métier</li>
       </ul>
     </li>
+  </ul>
+</section>
+<section>
+  <ul>
     <li>10. Quel pattern permet l’autonomie des équipes en limitant les dépendances ?
       <ul>
         <li>A) Conformist</li>
@@ -577,9 +615,16 @@ eventBus.publish(new PresentationCreated(pres.id));
       </ul>
     </li>
   </ul>
+</ul>
+</section>
+<section>
+  <aside class="notes">
+    <ul>
+      <li>Proposer un quiz interactif pour valider les connaissances.</li>
+      <li>Utiliser des outils comme Mentimeter ou Kahoot pour le rendre ludique.</li>
+    </ul>
   <p><strong>Réponses correctes :</strong> 1:B, 2:A, 3:B, 4:B, 5:B, 6:A, 7:B, 8:B, 9:B, 10:B</p>
   <p><strong>Politique de notation :</strong> +1 point pour chaque réponse correcte, -0,25 point pour chaque mauvaise réponse, note minimale 0, note maximale 10.</p>
-  <aside class="notes">
     <ul>
       <li>Proposez d’utiliser Mentimeter pour collecter les réponses en temps réel.</li>
       <li>Ou intégrez directement un plugin quiz dans Reveal.js (par exemple Reveal Quiz Plugin).</li>
